handle errors and renew forms (login & register)

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,32 +4,18 @@
 
 <div class="my-3">
     <h1 class="text-capitalize text-center my-2 ">register form</h1>
-    <form [formGroup]="registerForm" (ngSubmit)="submitRegisterForm()">
+    <form [formGroup]="registerForm" (ngSubmit)="handleRegisterForm(registerForm)">
         <div class="my-2 ">
-            <label>first name</label>
-            <input class="form-control" type="text" formControlName="first_name">
-            <div *ngIf="registerForm.controls.first_name.invalid && registerForm.controls.first_name.touched" class="text-danger mt-2">
-                <p class="fa-bounce" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; --fa-bounce-rebound: 0;" *ngIf="registerForm.controls.first_name.errors?.required">first name is required</p>
-                <p class="fa-fade"  *ngIf="registerForm.controls.first_name.errors?.minlength">first name min length is 3</p>
-                <p class="fa-fade" *ngIf="registerForm.controls.first_name.errors?.maxlength">first name max length is 10</p>
+            <label>name</label>
+            <input class="form-control" type="text" formControlName="name">
+            <div *ngIf="registerForm.controls.name.invalid && registerForm.controls.name.touched" class="text-danger mt-2">
+                <p class="fa-bounce" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; --fa-bounce-rebound: 0;" *ngIf="registerForm.controls.name.errors?.required"> name is required</p>
+                <p class="fa-fade"  *ngIf="registerForm.controls.name.errors?.minlength">first name min length is 3</p>
+                <p class="fa-fade" *ngIf="registerForm.controls.name.errors?.maxlength">first name max length is 10</p>
 
 
             </div>
         </div>
-    
-        <div class="my-2">
-            <label for="">last name</label>
-            <input class="form-control" type="text" formControlName="last_name">
-            <div *ngIf="registerForm.controls.last_name.invalid && registerForm.controls.last_name.touched" class="text-danger mt-2">
-                <p class="fa-bounce" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; --fa-bounce-rebound: 0;" *ngIf="registerForm.controls.last_name.errors?.required">last name is required</p>
-                <p class="fa-fade"  *ngIf="registerForm.controls.last_name.errors?.minlength">last name min length is 3</p>
-                <p class="fa-fade" *ngIf="registerForm.controls.last_name.errors?.maxlength">last name max length is 10</p>
-
-
-            </div>
-        </div>
-    
-    
     
         <div class="my-2">
             <label for="">email</label>
@@ -43,21 +29,30 @@
     
         <div class="my-2">
             <label for="">password</label>
-            <input class="form-control" type="password" formControlName="password">
+            <input class="form-control" type="password" formControlName="password" placeholder="password like A12345">
             <div *ngIf="registerForm.controls.password.invalid && registerForm.controls.password.touched" class="text-danger mt-2">
                 <p class="fa-bounce" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; --fa-bounce-rebound: 0;" *ngIf="registerForm.controls.password.errors?.required">password is required</p>
-                <p class="fa-fade"  *ngIf="registerForm.controls.password.errors?.pattern">Password is invalid "must be a letter followed by 3 numbers"</p>
+                <p class="fa-fade"  *ngIf="registerForm.controls.password.errors?.pattern">Password is invalid "must be a capital letter followed by  numbers"</p>
+            </div>
+        </div>
+
+        <div class="my-2">
+            <label for="">rePassword</label>
+            <input class="form-control" type="password" formControlName="rePassword">
+            <div *ngIf="registerForm.controls.rePassword.invalid && registerForm.controls.rePassword.touched" class="text-danger mt-2">
+                <p class="fa-bounce" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; --fa-bounce-rebound: 0;" *ngIf="registerForm.controls.rePassword.errors?.required">password is required</p>
+                <p class="fa-fade"  *ngIf="registerForm.controls.rePassword.errors?.pattern">Password is invalid "must be a capital letter followed by  numbers"</p>
             </div>
         </div>
     
     
         <div class="my-2">
-            <label for="">age</label>
-            <input class="form-control" type="number" formControlName="age">
-            <div *ngIf="registerForm.controls.age.invalid && registerForm.controls.age.touched" class="text-danger mt-2">
-                <p class="fa-bounce" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; --fa-bounce-rebound: 0;" *ngIf="registerForm.controls.age.errors?.required">age is required</p>
+            <label for="">phone Number</label>
+            <input class="form-control" type="tel" formControlName="phone">
+            <div *ngIf="registerForm.controls.phone.invalid && registerForm.controls.phone.touched" class="text-danger mt-2">
+                <p class="fa-bounce" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; --fa-bounce-rebound: 0;" *ngIf="registerForm.controls.phone.errors?.required">phone is required</p>
              
-                <p class="fa-fade" *ngIf="registerForm.controls.age.errors?.pattern">age must be between 20 to 80</p>
+                <p class="fa-fade" *ngIf="registerForm.controls.phone.errors?.pattern">phone must be valid (egyptian numbers)</p>
 
 
             </div>
